--- a/config/database.yml
+++ b/config/database.yml
@@ -17,15 +17,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  host: postgres
-  password: password
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
+  username: postgres
+  host: postgres
+  password: password
   database: crop_it_development
 
   # The specified database role being used to connect to postgres.
@@ -60,6 +60,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: postgres
+  host: postgres
+  password: password
   database: crop_it_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -85,5 +88,4 @@ test:
 production:
   <<: *default
   database: crop_it_production
-  username: crop_it
-  password: <%= ENV["CROP_IT_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
