--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,20 @@
 databases:
-  - name: db
-    databaseName: crop_it_production
-    user: postgres
+  - name: crop_it_db
+    databaseName: crop_it_db
+    user: crop_it
+    plan: free
 
 services:
   - type: web
-    name: crop-it
+    name: crop_it_app
     env: ruby
+    plan: free
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: crop_it_db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
