API to fetch country details

--- a/config/database.yml
+++ b/config/database.yml
@@ -88,4 +88,6 @@ test:
 production:
   <<: *default
   database: crop_it_production
-  url: <%= ENV['DATABASE_URL'] %>
+  username: "postgres"
+  password: "password"
+  host:   "/cloudsql/api-project-374912:us-central1:application-test-db"
